--- a/CitationMaker/CitationMaker/MainWindow.xaml
+++ b/CitationMaker/CitationMaker/MainWindow.xaml
@@ -1,12 +1,9 @@
-﻿<Window x:Class="CitationMaker.MainWindow"
+﻿<NavigationWindow x:Class="CitationMaker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CitationMaker"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
-</Window>
+        mc:Ignorable="d" ShowsNavigationUI="False"
+        Title="CitationMaker" Height="450" Width="800" Source="SelectPage.xaml">
+</NavigationWindow>
