--- a/CitationMaker/CitationMaker/Book.xaml
+++ b/CitationMaker/CitationMaker/Book.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="CitationMaker.Journal"
+﻿<Page x:Class="CitationMaker.Book"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CitationMaker"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
-      Title="Journal" Background="White" WindowTitle="Journal">
+      d:DesignHeight="500" d:DesignWidth="800" Background="White" Title="Book"
+      WindowTitle="Book">
 
     <ScrollViewer HorizontalScrollBarVisibility="Auto" Background="White">
         <StackPanel>
@@ -19,15 +19,15 @@
             <Grid>
                 <Label x:Name="AutherL" Content="著者名" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
                 <TextBox x:Name="AutherT" HorizontalAlignment="Left" Height="23" Margin="53,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Label x:Name="TitleL" Content="標題" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
+                <Label x:Name="TitleL" Content="書名" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
                 <TextBox x:Name="TitleT" HorizontalAlignment="Left" Height="23" Margin="53,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Label x:Name="BookL" Content="雑誌名" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
-                <TextBox x:Name="BookT" HorizontalAlignment="Left" Height="23" Margin="53,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Label x:Name="VolL" Content="巻" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
-                <TextBox x:Name="VolT" HorizontalAlignment="Left" Height="23" Margin="53,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Label x:Name="NoL" Content="号" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
-                <TextBox x:Name="NoT" HorizontalAlignment="Left" Height="23" Margin="53,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Label x:Name="PageSL" Content="ページ" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
+                <Label x:Name="EditorL" Content="編者名" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
+                <TextBox x:Name="EditorT" HorizontalAlignment="Left" Height="23" Margin="53,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
+                <Label x:Name="PublishL" Content="発行所" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
+                <TextBox x:Name="PublishT" HorizontalAlignment="Left" Height="23" Margin="53,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
+                <Label x:Name="CityL" Content="発行&#xD;&#xA;都市名" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" Width="43" Height="46" VerticalContentAlignment="Center" Padding="0" FontSize="13" HorizontalContentAlignment="Center"/>
+                <TextBox x:Name="CityT" HorizontalAlignment="Left" Height="24" Margin="53,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
+                <!--<Label x:Name="PageSL" Content="ページ" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
                 <TextBox x:Name="PageST" HorizontalAlignment="Left" Height="23" Margin="53,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="57"/>
                 <Label Content="-" HorizontalAlignment="Left" Margin="115,154,0,0" VerticalAlignment="Top" Height="23" Width="15" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                 <TextBox x:Name="PageET" HorizontalAlignment="Left" Height="23" Margin="135,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="57"/>
@@ -45,9 +45,9 @@
                     <ComboBoxItem Content="10"/>
                     <ComboBoxItem Content="11"/>
                     <ComboBoxItem Content="12"/>
-                </ComboBox>
-                <Label x:Name="YearL" Content="年" HorizontalAlignment="Left" Margin="10,209,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
-                <TextBox x:Name="YearT" HorizontalAlignment="Left" Height="23" Margin="53,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
+                </ComboBox>-->
+                <Label x:Name="YearL" Content="発行年" HorizontalAlignment="Left" Margin="10,177,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
+                <TextBox x:Name="YearT" HorizontalAlignment="Left" Height="23" Margin="53,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
                 <Button Content="作成" HorizontalAlignment="Left" Margin="20,241,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
                 <TextBox x:Name="CitationT" HorizontalAlignment="Left" Height="90" Margin="20,266,0,10" TextWrapping="Wrap"  VerticalAlignment="Top" Width="562"/>
                 <TextBox x:Name="tmp"  HorizontalAlignment="Left" Height="51" Margin="385,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" IsReadOnly="True"/>
