--- a/CitationMaker/CitationMaker/journal.xaml
+++ b/CitationMaker/CitationMaker/journal.xaml
@@ -11,7 +11,7 @@
     <ScrollViewer HorizontalScrollBarVisibility="Auto" Background="White">
         <StackPanel>
             <StackPanel>
-                <Button Content="戻る" Width="75" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Click_1"/>
+                <Button x:Name="Back" Content="戻る" Width="75" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Click_Back"/>
                 <Label Content="Language" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <RadioButton x:Name="RB_Jpn"  GroupName="Lang" Content="日本語" VerticalAlignment="Top" Checked="RadioButton_Checked_2" HorizontalAlignment="Left" Margin="10,0,0,0"/>
                 <RadioButton x:Name="RB_Eng" GroupName="Lang" Content="English" HorizontalAlignment="Left" VerticalAlignment="Top" Checked="RadioButton_Checked_2" Margin="10,0,0,0"/>
@@ -48,8 +48,8 @@
                 </ComboBox>
                 <Label x:Name="YearL" Content="年" HorizontalAlignment="Left" Margin="10,209,0,0" VerticalAlignment="Top" Width="43" Height="23" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" FontSize="13"/>
                 <TextBox x:Name="YearT" HorizontalAlignment="Left" Height="23" Margin="53,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="292"/>
-                <Button Content="作成" HorizontalAlignment="Left" Margin="20,241,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-                <TextBox x:Name="CitationT" HorizontalAlignment="Left" Height="90" Margin="20,266,0,10" TextWrapping="Wrap"  VerticalAlignment="Top" Width="562"/>
+                <Button x:Name="Make" Content="作成" HorizontalAlignment="Left" Margin="20,241,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Make"/>
+                <TextBox x:Name="CitationT" HorizontalAlignment="Left" Height="90" Margin="20,266,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="562"/>
                 <TextBox x:Name="tmp"  HorizontalAlignment="Left" Height="51" Margin="385,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" IsReadOnly="True"/>
                 <TextBox x:Name="tmpJpn" HorizontalAlignment="Left" Height="51" Margin="385,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" IsReadOnly="True"/>
                 <TextBox x:Name="tmpEng" HorizontalAlignment="Left" Height="51" Margin="385,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" IsReadOnly="True"/>
